RESOLVED FIXED213509
[WebXR] Fix PlatformXR initialization/destruction
https://bugs.webkit.org/show_bug.cgi?id=213509
Summary [WebXR] Fix PlatformXR initialization/destruction
Sergio Villar Senin
Reported 2020-06-23 04:50:25 PDT
[WebXR] Fix PlatformXR initialization/destruction
Attachments
Patch (2.96 KB, patch)
2020-06-23 05:06 PDT, Sergio Villar Senin
youennf: review+
Sergio Villar Senin
Comment 1 2020-06-23 05:06:30 PDT
youenn fablet
Comment 2 2020-06-23 06:18:54 PDT
Comment on attachment 402545 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402545&action=review > Source/WebCore/platform/xr/openxr/PlatformXROpenXR.cpp:218 > s_instance->m_impl = makeUnique<Impl>(); Can we do this assignment in Instance constructor? And make m_impl a UniqueRef<> maybe?
Sergio Villar Senin
Comment 3 2020-06-24 01:42:29 PDT
Comment on attachment 402545 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402545&action=review Thanks for the review! >> Source/WebCore/platform/xr/openxr/PlatformXROpenXR.cpp:218 >> s_instance->m_impl = makeUnique<Impl>(); > > Can we do this assignment in Instance constructor? > And make m_impl a UniqueRef<> maybe? Makes total sense.
Sergio Villar Senin
Comment 4 2020-06-24 01:50:13 PDT
Radar WebKit Bug Importer
Comment 5 2020-06-24 01:51:15 PDT
Note You need to log in before you can comment on or make changes to this bug.